--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -13,5 +13,6 @@
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
       <%= render partial: 'prototype', collection: @prototypes %>
     </div>
+    <%= paginate @prototypes %>
   </div>
 </main>
